test/invalid-syntax/57163_no_function_as_parameter/no_function_as_parameter.mag
-- Author: 57163, Guilherme Dias

fun functionAsParameter (f, a, b) : (fun, Int, Int) -> fun =
	f(a,b)

